--- a/src/component/footer.hbs
+++ b/src/component/footer.hbs
@@ -1,19 +1,19 @@
-	<footer>
-		<div>
-			{{#with social}}
-				{{> link text=email.text href=email.href blank=true }}
-				{{> link text=phone.text href=phone.href blank=true }}
-				{{> link text=linkedin.text href=linkedin.href blank=true noLine=true }}
-			{{/with}}
-		</div>
-		<br>
-		<div>
-			<em>Copyright {{firstname}} {{lastname}} </em>
-		</div>
-		<br>
-		<div>
-			<address>
-				{{address}}
-			</address>
-		</div>
-	</footer>
+<footer>
+	<div class="mb-4">
+		{{#with social}}
+		{{> link text=email.text href=email.href blank=true }}
+		{{> link text=phone.text href=phone.href blank=true }}
+		{{> link text=linkedin.text href=linkedin.href blank=true noLine=true }}
+		{{/with}}
+	</div>
+
+	<div class="mb-4">
+		<em>Copyright {{firstname}} {{lastname}} </em>
+	</div>
+
+	<div>
+		<address>
+			{{address}}
+		</address>
+	</div>
+</footer>
