--- a/src/container/work.hbs
+++ b/src/container/work.hbs
@@ -1,17 +1,15 @@
 <div>
     {{#with main}}
     <main>
-        <section>
+        <section class="ps-0">
             {{> title data='Work history' big=true}}
             <div>
                 <ul>
                     {{#each work}}
-                    <li>
-                        <div>{{position}}</div>
+                    <li class="mb-3">
+                        <div class="mb-3">{{position}}</div>
 
-                        <br>
-
-                        <div>
+                        <div class="mb-3">
                             {{duration.from}}
                             -
                             {{#if duration.to}}
@@ -21,9 +19,7 @@
                             {{/if}}
                         </div>
 
-                        <br>
-
-                        <div>
+                        <div class="mb-5">
                             {{#if company.url}}
                             {{> link text=company.name href=company.url blank=true noLine=true }}
                             {{else}}
@@ -31,35 +27,24 @@
                             {{/if}}
                         </div>
 
-                        <br>
-                        <br>
-
-                        <div><strong>Projects ({{projectAmount}})</strong></div>
-
-                        <br>
+                        <div class="mb-3"><strong>Projects ({{projectAmount}})</strong></div>
 
                         <ul>
                             {{#each projects}}
                             <li>
-                                <div>{{> link text=name href=url blank=true noLine=true }}</div>
+                                <div class="mb-3">{{> link text=name href=url blank=true noLine=true }}</div>
 
-                                <br>
-
-                                <div>
+                                <div class="mb-3">
                                     <p>
                                         {{about}}
                                     </p>
                                 </div>
 
-                                <br>
-
-                                <div>
+                                <div class="mb-3">
                                     <em>Project stacks ({{stackAmount}})</em>
                                 </div>
 
-                                <br>
-
-                                <div>
+                                <div class="mb-3">
                                     <ul>
                                         {{#each stacks}}
                                         <li>
@@ -69,13 +54,9 @@
                                     </ul>
                                 </div>
 
-                                <br>
-
-                                <div>
+                                <div class="mb-3">
                                     <em>Project awards ({{awardAmount}})</em>
                                 </div>
-
-                                <br>
 
                                 <div>
                                     <ul>
@@ -91,7 +72,7 @@
                             {{/each}}
                         </ul>
                     </li>
-                    <br>
+
                     {{/each}}
                 </ul>
             </div>
