--- a/src/layout/big.hbs
+++ b/src/layout/big.hbs
@@ -21,14 +21,13 @@
 
 	{{>nav}}
 
-	<br />
-	<hr />
+
+	<hr class="mt-5 mb-3">
 
 	{{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу }}
 	{{{body}}}
 
-	<br />
-	<hr />
+	<hr class="mt-1">
 
 	{{> footer social=footer.social address=header.address firstname=header.name.firstname
 	lastname=header.name.lastname}}
